added to media query

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <li><a href="#resorts">South Lake Tahoe Resorts</a></li>
                     <li><a href="#lodging">Tahoe Ski Resort Lodging</a></li>
                 </ul>		
-            </div><div class="column">
+            </div>
+            <div class="column">
                 <img src="img/mountain-landscape.jpg" alt="Mountain Landscape">
                 <h3>Pack Accordingly</h3>
                 <p>One of most important things when it comes to traveling through the great outdoors is packing accordingly. Here are a few tips:</p>
